Bug #63020
"ceph auth caps" doesnt print errmsg when perm flag in MDS cap is wrong
% Done:
0%
Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):
Description
Command ceph auth caps
doesn't print an error message when permission flag in MDS capability string passed by user is incorrect. This behaviour is wrong, others commands (ceph fs authorize
, ceph auth add
, ceph auth get-or-create
and ceph auth get-or-create-keyring
) do print a proper error message in such circumstances.
Make necessary changes to enable ceph auth caps
to print error message like other commands.
History
#1 Updated by Rishabh Dave 2 months ago
- Pull request ID set to 53405
#2 Updated by Rishabh Dave about 2 months ago
- Status changed from Fix Under Review to Resolved