src/mon/AuthMonitor.h
@@ -191,14 +191,16 @@ private:
 
   int _update_or_create_entity(const EntityName& entity,
     const std::map<std::string, std::string>& caps, MonOpRequestRef op,
-    std::stringstream& ds, bufferlist* rdata=nullptr, Formatter* fmtr=nullptr,
-    bool create_entity=false);
+    std::stringstream& ss, std::stringstream& ds, bufferlist* rdata=nullptr,
+    Formatter* fmtr=nullptr, bool create_entity=false);
   int _create_entity(const EntityName& entity,
     const std::map<std::string, std::string>& caps, MonOpRequestRef op,
-    std::stringstream& ds, bufferlist* rdata, Formatter* fmtr);
+    std::stringstream& ss, std::stringstream& ds, bufferlist* rdata,
+    Formatter* fmtr);
   int _update_caps(const EntityName& entity,
     const std::map<std::string, std::string>& caps, MonOpRequestRef op,
-    std::stringstream& ds, bufferlist* rdata, Formatter* fmtr);
+    std::stringstream& ss, std::stringstream& ds, bufferlist* rdata,
+    Formatter* fmtr);
 
   caps_update _gen_wanted_caps(EntityAuth& e_auth,
     std::map<std::string, std::string>& newcaps, std::ostream& out);
